--- a/lang/en.json
+++ b/lang/en.json
@@ -137,6 +137,7 @@
         "StatusIntensified": "Status effect '{statusName}' intensified on {targetName}",
         "StatusApplied": "Status effect '{statusName}' applied to {targetName}",
         "CreateNewPower": "Create New Power",
+        "CreateNewStatus": "Create New Status",
         "RollValue": "Roll Value",
         "StatusThreshold": "Threshold Value",
         "Repetitions": {
@@ -477,6 +478,7 @@
       "ShowGearCategoryDialogFailed": "Failed to show gear category dialog",
       "ClearEmbeddedItemFailed": "Failed to clear embedded item",
       "CreateNewPowerFailed": "Failed to create new combat power",
+      "CreateNewStatusFailed": "Failed to create new status effect",
       "EditEmbeddedItemFailed": "Failed to edit embedded item",
       "EditEmbeddedEffectFailed": "Failed to edit embedded effect",
       "RemoveEmbeddedEffectFailed": "Failed to remove embedded effect",
