--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -87,6 +87,7 @@
       "ShowGearCategoryDialogFailed": "Failed to show gear category dialog",
       "ClearEmbeddedItemFailed": "Failed to clear embedded item",
       "CreateNewPowerFailed": "Failed to create new combat power",
+      "CreateNewStatusFailed": "Failed to create new status effect",
       "EditEmbeddedItemFailed": "Failed to edit embedded item",
       "EditEmbeddedEffectFailed": "Failed to edit embedded effect",
       "RemoveEmbeddedEffectFailed": "Failed to remove embedded effect",
