--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -34,6 +34,7 @@
       "ActionCardItemTypes": "Action cards can only embed items of type: {supported}. Cannot add {type}.",
       "ActionCardEffectTypes": "Action cards can only embed effects of type: {supported}. Cannot add {type}.",
       "ActionCardStatusTypes": "Action cards can only embed status effects. Cannot add {type}.",
+      "ActionCardTransformationTypes": "Action cards can only embed transformations. Cannot add {type}.",
       "TransformationItemTypes": "Transformations can only embed combat powers and action cards.",
       "InvalidWeight": "Weight must be a valid number",
       "InvalidCost": "Cost must be a valid number",
@@ -123,6 +124,10 @@
       "EffectToggleError": "Failed to toggle effect",
       "FailedToAddEffectToActionCard": "Failed to add effect to action card",
       "FailedToAddItemToActionCard": "Failed to add item to action card",
+      "FailedToAddTransformationToActionCard": "Failed to add transformation '{transformationName}' to action card '{actionCardName}'",
+      "EditEmbeddedTransformationFailed": "Failed to edit embedded transformation",
+      "RemoveEmbeddedTransformationFailed": "Failed to remove embedded transformation",
+      "FailedToAddTransformation": "Failed to add transformation",
       "FolderDropError": "Failed to drop folder",
       "GearQuantityError": "Gear quantity error",
       "GearToggleError": "Failed to toggle gear",
