--- a/lang/src/en/action-cards.json
+++ b/lang/src/en/action-cards.json
@@ -21,6 +21,7 @@
         "DamageCondition": "Apply Damage",
         "DamageFormula": "Damage Formula",
         "DamageType": "Damage Type",
+        "DamageThreshold": "Damage Threshold",
         "DamageOn": "Damage on",
         "StatusConfig": "Status Configuration",
         "StatusCondition": "Apply Status",
