--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -148,6 +148,17 @@
         "AriaLabel": "Search and select a transformation",
         "ItemAdded": "Transformation '{itemName}' added"
       },
+      "CombatPowersSelector": {
+        "Placeholder": "Search for combat power to add...",
+        "AriaLabel": "Search and select a combat power",
+        "ItemAdded": "Combat power '{itemName}' added"
+      },
+      "ActionCardsSelector": {
+        "Placeholder": "Search for action card to add...",
+        "AriaLabel": "Search and select an action card",
+        "ItemAdded": "Action card '{itemName}' added"
+      },
+      "AddExisting": "Add Existing Items",
       "Placeholders": {
         "ChangeValue": "Change Value",
         "Description": "Description",
