--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -157,7 +157,10 @@
       "CreateNewActionCardFailed": "Failed to create new action card",
       "FailedToAddCombatPower": "Failed to add combat power",
       "FailedToAddActionCard": "Failed to add action card",
-      "TransformationCreationFailed": "Failed to create transformation"
+      "TransformationCreationFailed": "Failed to create transformation",
+      "GMOnlyOperation": "Only GMs can perform this operation",
+      "ExportOperationFailed": "Export operation failed",
+      "CompendiumCreationFailed": "Failed to create compendium '{label}'"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
@@ -175,13 +178,17 @@
       "CombatPowerDescriptionSaved": "Combat Power description saved.",
       "TransformationCreated": "Transformation '{name}' created successfully",
       "CustomTransformationsCompendiumCreated": "Custom Transformations compendium created",
-      "TransformationUsageGuidance": "Your transformation was created in the Custom Transformations compendium. Drag it to a character sheet when you're ready to transform them!"
+      "TransformationUsageGuidance": "Your transformation was created in the Custom Transformations compendium. Drag it to a character sheet when you're ready to transform them!",
+      "NoEmbeddedItemsToExport": "No embedded items to export",
+      "ItemsExportedToCompendium": "{count} {itemType} exported to {compendiumLabel}",
+      "CompendiumCreated": "Compendium '{label}' created"
     },
     "Warnings": {
       "CannotChangeImageWhileTransformed": "Cannot change image while transformed",
       "FieldLockedDuringTransformation": "This field is locked during transformation",
       "InsufficientPermissions": "Insufficient permissions",
-      "NoActiveTransformation": "No active transformation"
+      "NoActiveTransformation": "No active transformation",
+      "SomeItemsFailedToExport": "{failed} of {total} items failed to export"
     }
   }
 }
