--- a/lang/src/en/misc.json
+++ b/lang/src/en/misc.json
@@ -18,7 +18,9 @@
       "View": "View",
       "ViewReadOnly": "View (Read-Only)",
       "ReadOnly": "Read-Only",
-      "Remove": "Remove"
+      "Remove": "Remove",
+      "ExportEmbeddedCombatPowers": "Export Combat Powers",
+      "ExportEmbeddedActionCards": "Export Action Cards"
     },
     "General": {
       "None": "None",
