Added support for exporting embedded items from action cards.

--- a/lang/en.json
+++ b/lang/en.json
@@ -848,6 +848,10 @@
       "Remove": "Remove",
       "ExportEmbeddedCombatPowers": "Export Combat Powers",
       "ExportEmbeddedActionCards": "Export Action Cards",
+      "ExportEmbeddedActionItem": "Export Action Item",
+      "ExportEmbeddedEffects": "Export Effects",
+      "ExportEmbeddedTransformations": "Export Transformations",
+      "ExportAllEmbeddedItems": "Export All Embedded Items",
       "Edit": "Edit",
       "AddEffect": "Add Effect",
       "AddNewEffect": "Add New Effect",
