--- a/lang/en.json
+++ b/lang/en.json
@@ -795,6 +795,7 @@
         "CriticalHit": "Critical Hit!",
         "Dis": "dis",
         "Equipped": "Equipped",
+        "Effects": "Effects",
         "Power": "Power",
         "Removed": "Removed",
         "RemovedMessage": "had a status effect removed",
