--- a/lang/en.json
+++ b/lang/en.json
@@ -379,7 +379,16 @@
         "TransformationActionCards": "Action cards are provided by active transformation",
         "TransformationActionCard": "Action card from active transformation",
         "Transformed": "Transformed",
-        "TransformedLocked": "Action cards are provided by active transformation - cannot create or modify while transformed"
+        "TransformedLocked": "Action cards are provided by active transformation - cannot create or modify while transformed",
+        "Ungrouped": "Ungrouped Action Cards",
+        "DragToReorder": "Drag to reorder",
+        "GroupOptions": "Group options",
+        "GroupNamePlaceholder": "Group name...",
+        "DeleteGroup": "Delete group",
+        "CreateGroupSuccess": "Created group: {name}",
+        "DeleteGroupConfirm": "Delete group \"{name}\"? Cards will be moved to ungrouped.",
+        "DeleteGroupSuccess": "Deleted group: {name}",
+        "CardCopied": "Copied action card: {name}"
       }
     },
     "Chat": {
@@ -592,7 +601,11 @@
       "TransformationUsageGuidance": "Your transformation was created in the Custom Transformations compendium. Drag it to a character sheet when you're ready to transform them!",
       "NoEmbeddedItemsToExport": "No embedded items to export",
       "ItemsExportedToCompendium": "{count} {itemType} exported to {compendiumLabel}",
-      "CompendiumCreated": "Compendium '{label}' created"
+      "CompendiumCreated": "Compendium '{label}' created",
+      "CreateGroupError": "Failed to create action card group",
+      "RenameGroupError": "Failed to rename action card group",
+      "DeleteGroupError": "Failed to delete action card group",
+      "ToggleGroupError": "Failed to toggle group collapse state"
     },
     "Warnings": {
       "CannotChangeImageWhileTransformed": "Cannot change image while transformed",
@@ -972,7 +985,22 @@
     "Notifications": {
       "ThemeChanged": "Theme changed successfully",
       "TokenConfigCancelled": "Token configuration cancelled. Remove the transformation first to edit the token.",
-      "PrototypeTokenConfigCancelled": "Prototype token configuration cancelled. Remove the transformation first to edit the prototype token."
+      "PrototypeTokenConfigCancelled": "Prototype token configuration cancelled. Remove the transformation first to edit the prototype token.",
+      "TokenConfigBlockedForPlayers": "You cannot configure this token while it is transformed.",
+      "PrototypeTokenConfigBlockedForPlayers": "You cannot configure the prototype token while this actor is transformed."
+    },
+    "ContextMenu": {
+      "CreateGroup": "Create Group",
+      "RemoveFromGroup": "Remove from Group",
+      "RenameGroup": "Rename Group",
+      "DeleteGroup": "Delete Group",
+      "ExpandAll": "Expand All Groups",
+      "CollapseAll": "Collapse All Groups",
+      "Execute": "Execute",
+      "Edit": "Edit",
+      "Duplicate": "Duplicate",
+      "Delete": "Delete",
+      "SendToChat": "Send to Chat"
     }
   },
   "TYPES": {
